syntax = "proto3";

option csharp_namespace = "GrpcAuthenticationRequest";

import "Protos/Authentications/Models/AuthenticationModel.proto";

package GrpcAuthenticationRequest;

message AuthenticationRequest {
  GrpcAuthenticationModel.AuthenticationMethod Method = 1;
  string Password = 2;
}